--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start_dev": "nodemon ./bin/www"
   },
+  "author": "Aransa Garcia, Joseph P. Pasaoa, Kathy Puma, and Sergio Salama",
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
