--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "greenlistregistry-back-web",
+  "name": "greenlist-registry--back",
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "start": "node ./bin/www",
     "start_dev": "nodemon ./bin/www"
   },
   "author": "Aransa Garcia, Joseph P. Pasaoa, Kathy Puma, and Sergio Salama",
