--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   },
   "author": "Aransa Garcia, Joseph P. Pasaoa, Kathy Puma, and Sergio Salama",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "pg-promise": "^10.4.4"
   }
 }
