--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "greenlistregistry_front__web",
+  "name": "greenlist__fsweb--front",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.1",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/react-bootstrap": "^0.32.20",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "eslint-plugin-flowtype": "^4.6.0",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
+    "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-bootstrap-carousel": "^4.0.3",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
-    "typescript": "^3.8.2"
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "PORT=12000 react-scripts start",
